<?xml version="1.0" encoding="utf-8"?>
<!-- Ladder screen -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:padding="@dimen/gt_spacing_md">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical" android:layout_marginBottom="@dimen/gt_spacing_md">
        <TextView style="@style/GT.Text.Title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/nav_ladder" />
        <TextView android:id="@+id/textLadderEnd" style="@style/GT.Text.Secondary" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout style="@style/GT.Row.Header" android:orientation="horizontal">
        <TextView android:layout_width="40dp" android:layout_height="wrap_content" android:text="@string/ladder_rank" android:gravity="center" android:textColor="@color/white" android:textSize="@dimen/gt_text_xs" android:textStyle="bold" />
        <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="4" android:text="@string/club_team_name" android:textColor="@color/white" android:textSize="@dimen/gt_text_xs" android:textStyle="bold" />
        <TextView android:layout_width="50dp" android:layout_height="wrap_content" android:text="@string/squad_strength" android:gravity="center" android:textColor="@color/white" android:textSize="@dimen/gt_text_xs" android:textStyle="bold" />
        <TextView android:layout_width="50dp" android:layout_height="wrap_content" android:text="@string/ladder_points" android:gravity="center" android:textColor="@color/white" android:textSize="@dimen/gt_text_xs" android:textStyle="bold" />
        <TextView android:layout_width="80dp" android:layout_height="wrap_content" android:textSize="@dimen/gt_text_xs" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/recyclerLadder" android:layout_width="match_parent" android:layout_height="match_parent" />
</LinearLayout>
