<?xml version="1.0" encoding="utf-8"?>
<!-- Scouting screen -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="horizontal" android:padding="@dimen/gt_spacing_md">

    <!-- Left: Scout controls -->
    <LinearLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:orientation="vertical">
        <TextView style="@style/GT.Text.Title" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/nav_scouting" android:layout_marginBottom="@dimen/gt_spacing_lg" />
        <Spinner android:id="@+id/spinnerScoutType" android:layout_width="match_parent" android:layout_height="@dimen/gt_button_height"
            android:layout_marginBottom="@dimen/gt_spacing_md" />
        <Spinner android:id="@+id/spinnerPositionFilter" android:layout_width="match_parent" android:layout_height="@dimen/gt_button_height"
            android:layout_marginBottom="@dimen/gt_spacing_xl" />
        <Button android:id="@+id/btnInstruct" style="@style/GT.Button" android:layout_width="match_parent"
            android:text="@string/scouting_instruct" />
    </LinearLayout>

    <!-- Right: Scouted players -->
    <LinearLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="2"
        android:orientation="vertical" android:layout_marginStart="@dimen/gt_spacing_xl">
        <LinearLayout style="@style/GT.Row.Header" android:orientation="horizontal">
            <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="4"
                android:text="@string/squad_name" android:textColor="@color/white" android:textSize="@dimen/gt_text_xs" android:textStyle="bold" />
            <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="2"
                android:text="@string/squad_position" android:gravity="center" android:textColor="@color/white" android:textSize="@dimen/gt_text_xs" android:textStyle="bold" />
            <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
                android:text="@string/scouting_talent" android:gravity="center" android:textColor="@color/white" android:textSize="@dimen/gt_text_xs" android:textStyle="bold" />
            <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"
                android:text="@string/squad_strength" android:gravity="center" android:textColor="@color/white" android:textSize="@dimen/gt_text_xs" android:textStyle="bold" />
            <TextView android:layout_width="80dp" android:layout_height="wrap_content" android:textSize="@dimen/gt_text_xs" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/recyclerScouted" android:layout_width="match_parent" android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>
